# cuda-pathtracer

./: .gitignore  BRDF PDFs.ipynb  CMakeLists.txt  Makefile  README.md  cuda-pathtracer.sln  cuda_opengl.sln  cuda_opengl.vcxproj
cuda-pathtracer/: Makefile
cuda-pathtracer/src/: cuda_helper.cpp  cuda_helper.h  gpu_info.cpp  gpu_info.h  main.cpp
cuda_opengl/: cuda_opengl.vcxproj  imgui.ini
cuda_opengl/assets/: color_sample.scene  cornell.mtl  cornell.scene  crate_land.scene  cube.mtl  cube.scene  floor_normal.scene  floor_normal_rotated.scene  hut.scene  indoor.scene  island.scene  plane.scene  snow_moutain.scene  sss_crate.scene  wooden_hut_hill.scene
cuda_opengl/include/: gpu_processor.h
cuda_opengl/include/driver/: cuda_helper.h  gpu_info.h  interop.h
cuda_opengl/include/gui/: gui_manager.h  imconfig.h  imgui.h  imgui_impl_glfw_gl3.h  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
cuda_opengl/include/scene/: material_loader.h  scene.h  scene_data.h
cuda_opengl/include/shaders/: brdf.cuh  cutils_math.h  intersection.cuh  post_process.cuh  raytrace.h  volume.cuh
cuda_opengl/include/utils/: texture_utils.h  utils.h
cuda_opengl/src/: brdf.cuh  cpu_processor.cpp  cpu_processor.h  glad.cpp  gpu_processor.cpp  gpu_processor.h  interop.cc  interop.cpp  interop.h  interop.hh  kernel.hh  main.cpp  material_loader.cpp  material_loader.h  post_process.cuh  raytrace.cu  raytrace.h  scene.cpp  scene.h  scene_data.h  texture_utils.cpp  texture_utils.h  utils.cpp  utils.h
src/: kernel.cu  main.cc  main.cpp  main.cu  test.cu  test.h
(+22 files in other folders)
